# PyRBD_plusplus

./: CMakeLists.txt  LICENSE  README.md  availability_evaluation.py  cutsets.py  example.py  requirements.txt
include/: rbd.h
src/: python_bindings.cpp  rbd.cpp
topologies/: Pickle_Germany_17.pickle
